Fix layout bug with height

--- a/client/src/pages/Register/Register.scss
+++ b/client/src/pages/Register/Register.scss
@@ -1,7 +1,6 @@
 .content {
-  background-image: url('images/hero-image.png');
-  background-color: red;
-  height: 747px;
+  // background-image: url('images/hero-image.png');
+  background-color: black;
   width: 100%;
 }
 
